add links to pokemons show page/ still need solution for proper fix

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
     <title>Welcome To Pokemon World</title>
 </head>
 <body>
-    <h1>Pokemon</h1>
+    <h1>Pokemons Img</h1>
+    <a href="https://img.pokemondb.net/artwork/large/geodude.jpg">Geodude</a><br/>
+    <a href="https://img.pokemondb.net/artwork/avif/slowbro.avif">Slowbro</a><br/>
+    <a href="https://img.pokemondb.net/artwork/avif/gastly.avif">Gastly</a><br/>
+    <a href="https://img.pokemondb.net/artwork/avif/voltorb.avif">Voltorb</a><br/>
+    <a href="https://img.pokemondb.net/artwork/avif/snorlax.avif">Snorlax</a>
 </body>
 </html>
