--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,15 @@
 </head>
 <body>
     <h1>Pokemons Img</h1>
-    <a href="https://img.pokemondb.net/artwork/large/geodude.jpg">Geodude</a><br/>
-    <a href="https://img.pokemondb.net/artwork/avif/slowbro.avif">Slowbro</a><br/>
-    <a href="https://img.pokemondb.net/artwork/avif/gastly.avif">Gastly</a><br/>
-    <a href="https://img.pokemondb.net/artwork/avif/voltorb.avif">Voltorb</a><br/>
-    <a href="https://img.pokemondb.net/artwork/avif/snorlax.avif">Snorlax</a>
+    <p>
+        <a href="https://img.pokemondb.net/artwork/large/geodude.jpg">Geodude</a><br/>
+        <a href="https://img.pokemondb.net/artwork/avif/slowbro.avif">Slowbro</a><br/>
+        <a href="https://img.pokemondb.net/artwork/avif/gastly.avif">Gastly</a><br/>
+        <a href="https://img.pokemondb.net/artwork/avif/voltorb.avif">Voltorb</a><br/>
+        <a href="https://img.pokemondb.net/artwork/avif/snorlax.avif">Snorlax</a> 
+        <a href="https://img.pokemondb.net/artwork/avif/mewtwo-mega-y.avif">Mega Mewtwo Y</a>
+        <a href="https://img.pokemondb.net/artwork/avif/raichu-alolan.avif">Mega Mewtwo Y</a>
+    </p>
+
 </body>
 </html>
